feat: implement database store for valid purchases

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <input type="text" name="reach" id="reach" required />
     </div>
     <div>
-      <label for="reach">Tanghulu $100.00</label>
+      <label for="tanghulu" id="tanghulu-price">Tanghulu</label>
       <input type="number" name="tanghulu" id="tanghulu" placeholder="0">
     </div>
     <div>
-      <label for="reach">Dumplings $150.00</label>
+      <label for="dumpling" id="dumpling-price">Dumplings</label>
       <input type="number" name="dumpling" id="dumpling" placeholder="0" />
     </div>
 
