--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 <body class="flex items-center justify-center w-screen h-screen">
   <form class="flex flex-col rounded p-10 space-y-3 sm:w-1/3">
     <div class="flex flex-col space-y-3">
+
       <label class="input input-bordered flex items-center gap-2" for="name">
         Full Name
         <input class="grow" type="text" name="name" id="name" placeholder="John Winnipeg" required />
       </label>
+
       <label class="input input-bordered flex items-center gap-2" for="email">
         Email
         <input class="grow" type="text" name="email" id="email" placeholder="your@email.ca" required />
       </label>
+
       <div class="flex flex-col gap-2">
         <label class="" for="reach">How did you hear about us?</label>
         <div class="input input-bordered flex items-center">
@@ -26,16 +29,23 @@
           <span class="badge badge-info">Optional</span>
         </div>
       </div>
-      </input>
     </div>
-    <div>
-      <label for="tanghulu">Tanghulu</label>
-      <input class="input input-bordered" type="number" name="tanghulu" id="tanghulu" placeholder="0">
+
+    <div class="flex items-center">
+      <label class="input input-bordered flex items-center gap-2" for="tanghulu">
+        <span>Tanghulu</span>
+        <input class="w-12" type="number" name="tanghulu" id="tanghulu" placeholder="0">
+      </label>
+      <div class="grow"></div>
       <span for="tanghulu" id="tanghulu-price">$0.00</span>
     </div>
-    <div>
-      <label for="dumpling">Dumplings</label>
-      <input class="input input-bordered" type="number" name="dumpling" id="dumpling" placeholder="0" />
+
+    <div class="flex items-center">
+      <label class="input input-bordered flex items-center gap-2" for="dumpling">
+        <span>Dumpling</span>
+        <input class="w-12" type="number" name="dumpling" id="dumpling" placeholder="0" />
+      </label>
+      <div class="grow"></div>
       <span for="tanghulu" id="dumpling-price">$0.00</span>
     </div>
 
@@ -44,7 +54,7 @@
       <span id="total">$0.00</span>
     </div>
 
-    <div id="payment-form" class="flex flex-col">
+    <div id="payment-form" class="flex flex-col space-y-5 sm:space-y-0">
       <div id="card-container" class="mb-0 min-[565px]:mb-[43px] h-[97px] min-[565px]:h-[50px] rounded skeleton w-full">
       </div>
       <button id="card-button" class="btn btn-primary" type="submit">Pay</button>
